# tidal-midi-input

./: LICENSE  README.md  tidal-midi-input.cabal
Sound/Tidal/MIDI/: Input.hs
